# interpreter

./: .gitignore  CMakeLists.txt  chain  thoughts.txt
examples/: control-flow.chain  declaration.chain  equality.chain  errors.chain  functions.chain  printing.chain  program.chain  runtime-errors.chain  scopes.chain  single_expression.chain  token_errors.chain
optimized/: CMakeLists.txt  array.h  ast.c  ast.h  c_target.c  chunk.c  chunk.h  compiler.c  compiler.h  interpreter.c  interpreter.h  location.c  location.h  main.c  memory.c  memory.h  object.c  object.h  opcodes.h  parser.c  parser.h  preamble.h  slice.c  slice.h  table.h  temp.txt  tokenizer.c  tokenizer.h  utf8.c  utf8.h  value.c  value.h
optimized/libraries/: allocators  c-preamble  c_table  nax_logging
optimized/sorted_array/: CMakeLists.txt  index.html  main.c
optimized/table/: CMakeLists.txt  main.c  pokedex.txt  table.h
src/: array.c  array.h  chain.c  chunk.c  chunk.h  compiler.c  compiler.h  debug.h  error.c  error.h  interpreter.c  interpreter.h  memory.c  memory.h  object.c  object.h  opcodes.h  parser.c  parser.h  preamble.h  slice.c  slice.h  table.c  table.h  token.c  token.h  tokens.h  utf8.c  utf8.h  value.c  value.h
tests/: main.c  test.h  test_expression.c  test_table.c
